fixed overflow issue

--- a/src/calendar/assets/css/style.css
+++ b/src/calendar/assets/css/style.css
@@ -119,6 +119,8 @@
 
 #osome-cal-grid {
     margin: 0;
+    padding-top: 32px;
+
 }
 
 .text-blue {
