--- a/src/gantt/assets/css/style.css
+++ b/src/gantt/assets/css/style.css
@@ -9,9 +9,10 @@ body {
 .osome-gantt-grid-container {
     position: absolute;
     width:100%;
-    padding:0;
+    height:100%;
+    overflow-y:auto;
 }
-::-webkit-scrollbar { 
+.osome-gantt-grid-container::-webkit-scrollbar { 
     display: none; 
 }
 .osome-gantt-grid-inner-container {
